@@ -568,13 +568,12 @@ static struct {
 	{"iRiver:T20",                          0x4102, 0x1118, 0},
 	/* Bruno Parente Lima <brunoparente77@yahoo.com.br> */
 	{"iRiver:T30",                          0x4102, 0x1119, 0},
-
-
 	/* From: thanosz@softhome.net */
 	{"Philipps:HDD6320",                    0x0471, 0x01eb, 0},
-
 	/* Jennifer Scalf <oneferna@gmail.com> */
 	{"Creative:Zen MicroPhoto",             0x041e, 0x413c, 0},
+	/* Marcoen Hirschberg <marcoen@users.sourceforge.net> */
+	{"Toshiba:Gigabeat",                    0x0930, 0x000c, 0},
 
 	/* more coming soon :) */
 	{NULL, 0, 0, 0}
