@@ -1,3 +1,7 @@
+2006-01-31  Marcus Meissner  <marcus@jet.franken.de>
+
+	* library.c: Added Toshiba Gigabeat MTP player.
+
 2006-01-30  Marcus Meissner  <marcus@jet.franken.de>
 
 	* library.c: Added Nikon SDRAM capture.
